--- a/2023/day-3/package.json
+++ b/2023/day-3/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node --esm index.ts"
+    "dev": "ts-node something.ts --esm"
   },
   "keywords": [],
   "author": "",
